[package]
name = "retroimg"
version = "0.1.0"
authors = ["Eduardo Pinho <enet4mikeenet@gmail.com>"]
description = "Convert images to look like in retro IBM hardware"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/Enet4/retroimg"
edition = "2018"
categories = ["command-line-utilities"]
keywords = ["cli", "image", "retro", "vga", "cga", "ega"]
exclude = ["outputs/*", "samples/*"]

[features]
l1 = []

[lib]
name = "retroimg"
path = "src/lib.rs"

[[bin]]
name = "retroimg"
path = "src/main.rs"

[dependencies]
exoquant = "0.2.0"
structopt = "0.3.21"
image = "0.23.12"
itertools = "0.10.0"
num = "0.4.0"
snafu = "0.6.10"
