[package]
name = "retroimg"
version = "0.2.1-alpha.0"
authors = ["Eduardo Pinho <enet4mikeenet@gmail.com>"]
description = "Convert images to look like in retro IBM hardware"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/Enet4/retroimg"
edition = "2018"
categories = ["command-line-utilities"]
keywords = ["cli", "image", "retro", "vga", "cga"]
exclude = ["outputs/*", "samples/*"]

[features]
l1 = []

[lib]
name = "retroimg"
path = "src/lib.rs"

[[bin]]
name = "retroimg"
path = "src/main.rs"

[dependencies]
exoquant = "0.2.0"
image = "0.24.1"
itertools = "0.10.0"
snafu = "0.7.0"
clap = { version = "3.1.18", features = ["derive"] }
num-integer = "0.1.45"

[dependencies.num-rational]
version = "0.4.0"
default-features = false
