[package]
name = "retroimg"
version = "0.3.1-alpha.0"
authors = ["Eduardo Pinho <enet4mikeenet@gmail.com>"]
description = "Convert images to look like in retro IBM hardware"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/Enet4/retroimg"
edition = "2018"
categories = ["command-line-utilities"]
keywords = ["cli", "image", "retro", "vga", "cga"]
exclude = ["outputs/*", "samples/*"]

[features]
default = ["cli"]
cli = ["clap"]
l1 = []

[lib]
name = "retroimg"
path = "src/lib.rs"

[[bin]]
name = "retroimg"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
exoquant = "0.2.0"
itertools = "0.11.0"
snafu = "0.7.0"
num-integer = "0.1.45"

[dependencies.clap]
version = "4.4.6"
features = ["derive"]
optional = true

[dependencies.num-rational]
version = "0.4.0"
default-features = false

[dependencies.image]
version = "0.24.1"
default-features = false
features = ["gif", "jpeg", "ico", "png", "pnm", "tga", "tiff", "webp", "bmp", "farbfeld", "jpeg_rayon"]
